[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://screenshot.png" type="Texture" id=2]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontIngame.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMenu.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMedium.tres" type="DynamicFont" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Front" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = -78.0
margin_right = -19.0
margin_bottom = -19.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Front"]
margin_right = 243.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Play"

[node name="Content" type="Button" parent="Front"]
margin_left = 247.0
margin_right = 490.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Content"

[node name="Settings" type="Button" parent="Front"]
margin_left = 494.0
margin_right = 737.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Settings"

[node name="Quit" type="Button" parent="Front"]
margin_left = 741.0
margin_right = 986.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Quit"

[node name="MenuBackground" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 13.0
margin_right = -20.0
margin_bottom = -17.0
rect_min_size = Vector2( 982, 563 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuBackground"]
margin_right = 986.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.180392, 0.184314, 0.223529, 0.960784 )

[node name="Play" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 13.0
margin_right = -29.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="HBoxContainer" parent="Play"]
margin_right = 970.0
margin_bottom = 296.0
size_flags_vertical = 3

[node name="Tracks" type="VBoxContainer" parent="Play/Selection"]
margin_right = 970.0
margin_bottom = 296.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Play/Selection/Tracks"]
margin_right = 970.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 5 )
text = "Tracks:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Play/Selection/Tracks"]
margin_top = 57.0
margin_right = 970.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
items = [ "Strecke 1", null, false ]

[node name="Scenarios" type="VBoxContainer" parent="Play/Selection"]
visible = false
margin_left = 324.0
margin_right = 644.0
margin_bottom = 274.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Play/Selection/Scenarios"]
margin_right = 320.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 4 )
text = "Scenarios:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Play/Selection/Scenarios"]
margin_top = 79.0
margin_right = 320.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
items = [ "Strecke 1", null, false ]

[node name="Trains" type="VBoxContainer" parent="Play/Selection"]
visible = false
margin_left = 648.0
margin_right = 970.0
margin_bottom = 274.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Play/Selection/Trains"]
margin_right = 322.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 4 )
text = "Train:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Play/Selection/Trains"]
margin_top = 79.0
margin_right = 322.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
items = [ "Strecke 1", null, false ]

[node name="Info" type="HBoxContainer" parent="Play"]
margin_top = 300.0
margin_right = 970.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 200 )

[node name="Description" type="RichTextLabel" parent="Play/Info"]
margin_right = 610.0
margin_bottom = 200.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 3 )

[node name="Screenshot" type="TextureRect" parent="Play/Info"]
margin_left = 614.0
margin_right = 970.0
margin_bottom = 200.0
rect_min_size = Vector2( 356, 0 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Play"]
margin_top = 504.0
margin_right = 970.0
margin_bottom = 563.0

[node name="Back" type="Button" parent="Play/Buttons"]
margin_right = 483.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Back"

[node name="Play" type="Button" parent="Play/Buttons"]
margin_left = 487.0
margin_right = 970.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Play"

[node name="Content" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 13.0
margin_right = -29.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content"]
margin_right = 970.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "To add content you have to place .pck files at "

[node name="Label2" type="Label" parent="Content"]
margin_top = 34.0
margin_right = 970.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "Currently loaded additional Content Packs:"

[node name="ItemList" type="ItemList" parent="Content"]
margin_top = 68.0
margin_right = 970.0
margin_bottom = 466.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Content"]
margin_top = 470.0
margin_right = 970.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 3 )
text = "Hint: If you updated a Content Pack, you have to restart the simulator."

[node name="Buttons" type="HBoxContainer" parent="Content"]
margin_top = 504.0
margin_right = 970.0
margin_bottom = 563.0

[node name="Back" type="Button" parent="Content/Buttons"]
margin_right = 483.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Back"

[node name="Reload" type="Button" parent="Content/Buttons"]
margin_left = 487.0
margin_right = 970.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Reload"

[node name="Settings" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 13.0
margin_right = -29.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings"]
margin_right = 970.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 5 )
text = "Settings:"
align = 1

[node name="GridContainer" type="GridContainer" parent="Settings"]
margin_top = 57.0
margin_right = 970.0
margin_bottom = 500.0
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="Settings/GridContainer"]
margin_top = 5.0
margin_right = 106.0
margin_bottom = 19.0
text = "Fullscreen Mode"

[node name="Fullscreen" type="CheckBox" parent="Settings/GridContainer"]
margin_left = 110.0
margin_right = 134.0
margin_bottom = 24.0

[node name="Buttons" type="HBoxContainer" parent="Settings"]
margin_top = 504.0
margin_right = 970.0
margin_bottom = 563.0

[node name="Back" type="Button" parent="Settings/Buttons"]
margin_right = 970.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Back"
[connection signal="pressed" from="Front/Play" to="." method="_on_PlayFront_pressed"]
[connection signal="pressed" from="Front/Content" to="." method="_on_Content_pressed"]
[connection signal="pressed" from="Front/Settings" to="." method="_on_SettingsFrong_pressed"]
[connection signal="pressed" from="Front/Quit" to="." method="_on_Quit_pressed"]
[connection signal="item_selected" from="Play/Selection/Tracks/ItemList" to="." method="_on_ItemList_itemTracks_selected"]
[connection signal="pressed" from="Play/Buttons/Back" to="." method="_on_BackPlay_pressed"]
[connection signal="pressed" from="Play/Buttons/Play" to="." method="_on_PlayPlay_pressed"]
[connection signal="pressed" from="Content/Buttons/Back" to="." method="_on_BackContent_pressed"]
[connection signal="pressed" from="Content/Buttons/Reload" to="." method="_on_ReloadContent_pressed"]
[connection signal="pressed" from="Settings/GridContainer/Fullscreen" to="." method="_on_FullscreenSettings_pressed"]
[connection signal="pressed" from="Settings/Buttons/Back" to="." method="_on_BackSettings_pressed"]
