[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://screenshot.png" type="Texture" id=2]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontIngame.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMenu.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMedium.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/follow-that-dream-by-luca-fraula-from-filmmusic-io.ogg" type="AudioStream" id=6]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/SettingsMenu.tscn" type="PackedScene" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
version = "0.7"

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feedback" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -218.62
margin_top = 13.2964
margin_right = -11.62
margin_bottom = 49.2964
custom_fonts/font = ExtResource( 3 )
text = "MENU_FEEDBACK_WANTED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Front" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = -85.0
margin_right = -10.9999
margin_bottom = -34.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Front"]
margin_right = 196.0
margin_bottom = 51.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "MENU_PLAY"

[node name="Content" type="Button" parent="Front"]
margin_left = 200.0
margin_right = 397.0
margin_bottom = 51.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "MENU_CONTENT"

[node name="Create" type="Button" parent="Front"]
margin_left = 401.0
margin_right = 598.0
margin_bottom = 51.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "MENU_CREATE"

[node name="Settings" type="Button" parent="Front"]
margin_left = 602.0
margin_right = 799.0
margin_bottom = 51.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "MENU_SETTINGS"

[node name="Quit" type="Button" parent="Front"]
margin_left = 803.0
margin_right = 1000.0
margin_bottom = 51.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "MENU_QUIT"

[node name="MenuBackground" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 13.0
margin_right = -20.0
margin_bottom = -17.0
rect_min_size = Vector2( 982, 563 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuBackground"]
margin_right = 986.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.180392, 0.184314, 0.223529, 0.960784 )

[node name="Play" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 13.0
margin_right = -29.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="HBoxContainer" parent="Play"]
margin_right = 970.0
margin_bottom = 304.0
size_flags_vertical = 3

[node name="Tracks" type="VBoxContainer" parent="Play/Selection"]
margin_right = 970.0
margin_bottom = 304.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Play/Selection/Tracks"]
margin_right = 970.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "MENU_TRACKS:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Play/Selection/Tracks"]
margin_top = 49.0
margin_right = 970.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
items = [ "Strecke 1", null, false ]

[node name="Scenarios" type="VBoxContainer" parent="Play/Selection"]
visible = false
margin_left = 324.0
margin_right = 645.0
margin_bottom = 508.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Play/Selection/Scenarios"]
margin_right = 321.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "MENU_SCENARIOS:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Play/Selection/Scenarios"]
margin_top = 49.0
margin_right = 321.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
items = [ "Strecke 1", null, false ]

[node name="Trains" type="VBoxContainer" parent="Play/Selection"]
visible = false
margin_left = 487.0
margin_right = 970.0
margin_bottom = 508.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Play/Selection/Trains"]
margin_right = 483.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "MENU_TRAIN:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Play/Selection/Trains"]
margin_top = 49.0
margin_right = 483.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
items = [ "Strecke 1", null, false ]

[node name="Info" type="HBoxContainer" parent="Play"]
margin_top = 308.0
margin_right = 970.0
margin_bottom = 508.0
rect_min_size = Vector2( 0, 200 )

[node name="Description" type="RichTextLabel" parent="Play/Info"]
margin_right = 606.0
margin_bottom = 200.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 3 )

[node name="Info" type="VBoxContainer" parent="Play/Info"]
margin_left = 610.0
margin_right = 610.0
margin_bottom = 200.0

[node name="Author" type="Label" parent="Play/Info/Info"]
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )

[node name="ReleaseDate" type="Label" parent="Play/Info/Info"]
margin_top = 34.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )

[node name="Duration" type="Label" parent="Play/Info/Info"]
margin_top = 68.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )

[node name="EasyMode" type="CheckBox" parent="Play/Info/Info"]
visible = false
margin_top = 102.0
margin_right = 104.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 3 )
pressed = true
text = "MENU_EASY_MODE"

[node name="Screenshot" type="TextureRect" parent="Play/Info"]
margin_left = 614.0
margin_right = 970.0
margin_bottom = 200.0
rect_min_size = Vector2( 356, 0 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Play"]
margin_top = 512.0
margin_right = 970.0
margin_bottom = 563.0

[node name="Back" type="Button" parent="Play/Buttons"]
margin_right = 483.0
margin_bottom = 51.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "MENU_BACK"

[node name="Play" type="Button" parent="Play/Buttons"]
margin_left = 487.0
margin_right = 970.0
margin_bottom = 51.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "MENU_PLAY"

[node name="Content" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 13.0
margin_right = -29.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content"]
margin_right = 970.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "MENU_TO_ADD_CONTENT"

[node name="Label2" type="Label" parent="Content"]
margin_top = 34.0
margin_right = 970.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "MENU_CURRENT_LOADED_PACKS"

[node name="ItemList" type="ItemList" parent="Content"]
margin_top = 68.0
margin_right = 970.0
margin_bottom = 474.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Content"]
margin_top = 478.0
margin_right = 970.0
margin_bottom = 508.0
custom_fonts/font = ExtResource( 3 )
text = "MENU_HINT_UPDATED_CONTENT_PACK"

[node name="Buttons" type="HBoxContainer" parent="Content"]
margin_top = 512.0
margin_right = 970.0
margin_bottom = 563.0

[node name="Back" type="Button" parent="Content/Buttons"]
margin_right = 483.0
margin_bottom = 51.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "MENU_BACK"

[node name="Reload" type="Button" parent="Content/Buttons"]
margin_left = 487.0
margin_right = 970.0
margin_bottom = 51.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "MENU_RELOAD"

[node name="Loading" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -372.0
margin_top = -151.0
margin_right = 189.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LOADING"

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -201.0
margin_top = -33.0
margin_right = -6.0
margin_bottom = -3.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 3 )
text = "Version: 0.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Music" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_right = 306.0
custom_fonts/font = ExtResource( 3 )
text = "MENU_MUSIC:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 7 )]
visible = false

[node name="FeedBack" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.5
margin_top = -80.5
margin_right = 227.5
margin_bottom = 80.5
window_title = "Feedback"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FeedBack"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="FeedBack/VBoxContainer"]
margin_right = 455.0
margin_bottom = 121.0
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
text = "MENU_FEEDBACK_QUESTION"

[node name="HBoxContainer" type="HBoxContainer" parent="FeedBack/VBoxContainer"]
margin_top = 125.0
margin_right = 455.0
margin_bottom = 161.0
size_flags_horizontal = 3

[node name="Later" type="Button" parent="FeedBack/VBoxContainer/HBoxContainer"]
margin_right = 225.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_LATER"

[node name="OpenWebBrowser" type="Button" parent="FeedBack/VBoxContainer/HBoxContainer"]
margin_left = 229.0
margin_right = 455.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "MENU_OPEN_IN_BROWSER"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.384
[connection signal="pressed" from="Feedback" to="." method="_on_ButtonFeedback_pressed"]
[connection signal="pressed" from="Front/Play" to="." method="_on_PlayFront_pressed"]
[connection signal="pressed" from="Front/Content" to="." method="_on_Content_pressed"]
[connection signal="pressed" from="Front/Create" to="." method="_on_FrontCreate_pressed"]
[connection signal="pressed" from="Front/Settings" to="." method="_on_SettingsFront_pressed"]
[connection signal="pressed" from="Front/Quit" to="." method="_on_Quit_pressed"]
[connection signal="item_selected" from="Play/Selection/Tracks/ItemList" to="." method="_on_ItemList_itemTracks_selected"]
[connection signal="item_selected" from="Play/Selection/Scenarios/ItemList" to="." method="_on_ItemList_scenario_selected"]
[connection signal="item_selected" from="Play/Selection/Trains/ItemList" to="." method="_on_ItemList_Train_selected"]
[connection signal="pressed" from="Play/Buttons/Back" to="." method="_on_BackPlay_pressed"]
[connection signal="pressed" from="Play/Buttons/Play" to="." method="_on_PlayPlay_pressed"]
[connection signal="pressed" from="Content/Buttons/Back" to="." method="_on_BackContent_pressed"]
[connection signal="pressed" from="Content/Buttons/Reload" to="." method="_on_ReloadContent_pressed"]
[connection signal="pressed" from="FeedBack/VBoxContainer/HBoxContainer/Later" to="." method="_on_Later_pressed"]
[connection signal="pressed" from="FeedBack/VBoxContainer/HBoxContainer/OpenWebBrowser" to="." method="_on_OpenWebBrowser_pressed"]
